--- a/src/css/LoginPage.css
+++ b/src/css/LoginPage.css
@@ -72,3 +72,21 @@
   color: #ef4444;
   font-weight: 500;
 }
+
+.loader {
+  border: 3px solid #f3f3f3;
+  border-top: 3px solid #333;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 0.8s linear infinite;
+  display: inline-block;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
