updated upload buton

--- a/src/css/UserHomePage.css
+++ b/src/css/UserHomePage.css
@@ -766,3 +766,11 @@
     flex-direction: column;
   }
 }
+
+
+
+button[disabled] {
+  background-color: #aaa;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
