--- a/src/css/Register.css
+++ b/src/css/Register.css
@@ -53,9 +53,9 @@ body {
 
 #eye{
     position: absolute;
-    /* right: 15px; */
-    /* top: 38px; */
-    /* left: 2px; */
+    /* right: 15px; 
+    top: 38px; 
+    left: 2px;  */
     margin-left: -30px;
     transform: translateY(62.5%);
     cursor: pointer;
@@ -88,6 +88,24 @@ body {
 p{
   margin-top: 5px;  
 }
+
+.loader {
+  border: 3px solid #f3f3f3;
+  border-top: 3px solid #333;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 0.8s linear infinite;
+  display: inline-block;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 
 @media (max-width: 768px) {
   #register-form {
