--- a/src/css/Browse.css
+++ b/src/css/Browse.css
@@ -1,4 +1,4 @@
-.browse-container {
+/* .browse-container {
   padding: 2rem;
 }
 
@@ -7,7 +7,7 @@
   text-align: center;
 }
 
-/* ✨ Modern Loading Spinner */
+
 .modern-loader-container {
   display: flex;
   flex-direction: column;
@@ -96,7 +96,7 @@
 }
 }
 
-/* 🟡 Modal Overlay */
+
 #note-details-overlay {
   position: fixed;
   top: 0;
@@ -110,7 +110,7 @@
   z-index: 9999;
 }
 
-/* 🟢 Modal Box */
+
 #note-details-modal {
   background: #fff;
   padding: 2rem;
@@ -133,7 +133,7 @@
   color: #333;
 }
 
-/* 🧱 Layout: Details on Left | Image on Right */
+
 #modal-content-row {
   display: flex;
   justify-content: space-between;
@@ -187,7 +187,7 @@
   background-color: #444;
   color: #fff;
 }
-
+ */
 
 
 /* #svdu button {
