--- a/src/css/Browse.css
+++ b/src/css/Browse.css
@@ -1,4 +1,4 @@
-/* .browse-container {
+.browse-container {
   padding: 2rem;
 }
 
@@ -187,10 +187,10 @@
   background-color: #444;
   color: #fff;
 }
- */
+ 
 
 
-/* #svdu button {
+#svdu button {
   height: 40px;
   width: 90px;
   border-radius: 10px;
@@ -205,17 +205,17 @@
 #svdu button:hover {
   background-color: #444;
   color: #fff;
-} */
+}
 
 /* 📱 Responsive Layout */
 
-/* @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .notes-grid {
     grid-template-columns: repeat(4, 1fr);
   }
-} */
+}
 
-/* @media (max-width: 600px) {
+@media (max-width: 600px) {
   #modal-content-row {
     flex-direction: column-reverse;
     align-items: center;
@@ -224,15 +224,15 @@
   #modal-note-image {
     max-width: 100%;
   }
-} */
+} 
 
-/* @media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) {
   .notes-grid {
     grid-template-columns: repeat(2, 1fr);
   }
-} */
+} 
 
-/* @keyframes fadeIn {
+@keyframes fadeIn {
   from {
     opacity: 0;
     transform: scale(0.96);
@@ -241,4 +241,4 @@
     opacity: 1;
     transform: scale(1);
   }
-} */
+}
