--- a/src/css/Register.css
+++ b/src/css/Register.css
@@ -68,7 +68,7 @@ body {
   padding: 14px;
   font-size: 16px;
   font-weight: 600;
-  background: linear-gradient(to right, #6366f1, #8b5cf6);
+  background-color: #111827;
   color: white;
   border: none;
   border-radius: 14px;
@@ -77,7 +77,7 @@ body {
 }
 
 #registerBtn:hover {
-  background: linear-gradient(to right, #4f46e5, #7c3aed);
+  background-color: #212938;
   transform: translateY(-2px);
 }
 
