--- a/src/css/UserProfile.css
+++ b/src/css/UserProfile.css
@@ -1,4 +1,4 @@
-/* .user-profile-card {
+.user-profile-card {
   max-width: 500px;
   margin: 80px auto;
   padding: 30px;
@@ -41,4 +41,4 @@
 .profile-info strong {
   color: #6b7280;
   min-width: 100px;
-} */
+}
